--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@angular/platform-browser-dynamic": "~8.1.3",
         "@angular/router": "~8.1.3",
         "@ng-bootstrap/ng-bootstrap": "^5.1.0",
+        "axios": "^0.19.2",
         "body-parser": "^1.19.0",
         "bootstrap": "^4.5.0",
         "cors": "^2.8.5",
